--- a/partials/film-list.html
+++ b/partials/film-list.html
@@ -1,6 +1,6 @@
 <div id="list" infinite-scroll="loadMore()" infinite-scroll-distance="2">
 	<ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-8">
-	    <li ng-repeat="film in films | filter:rechercher | orderBy:rtri:rsens() | limitTo:loadNb">
+	    <li ng-repeat="film in films | filter:rechercher | filter:{genres:gfilter} | orderBy:rtri:rsens() | limitTo:loadNb">
 	    	<a title="Voir ce film" href="#/films/{{ film.tmdbid }}">
 		        <img ng-src="api/data/films/poster/{{ film.tmdbid }}_w300.jpg" alt="{{ film.titlefr }}" /><br />
 		        {{ film.titlefr }}
